# tune-lab

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-wsl.txt
configs/: llamafactory_dataset_info.json  qwen2.5_0.5b_chnsenticorp_lora.yaml  qwen2.5_0.5b_chnsenticorp_lora_smoke.yaml
data/processed/chnsenticorp_sentiment/: stats.json
frontend/: app.js  index.html  styles.css
outputs/chnsenticorp_eval/: eval_report.md
scripts/: evaluate.sh  install_wsl_system_deps.sh  run_wsl_setup.sh  serve_ui.sh  train_full.sh  train_quick.sh  train_resume_grade.sh  train_smoke.sh
src/domain_tune_lab/: __init__.py  evaluate_sentiment_models.py  prepare_chnsenticorp.py  serve_sentiment.py  sync_llamafactory_data.py  train_sentiment_lora.py
