[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-tune-lab"
version = "0.1.0"
description = "Public Chinese sentiment LoRA fine-tuning lab with reproducible evaluation."
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.18.0",
  "transformers>=4.45.0",
  "accelerate>=0.34.0",
  "peft>=0.12.0",
  "torch>=2.4.0",
  "sentencepiece>=0.2.0",
  "protobuf>=4.25.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
prepare-chnsenticorp = "domain_tune_lab.prepare_chnsenticorp:main"
sync-llamafactory-data = "domain_tune_lab.sync_llamafactory_data:main"
evaluate-sentiment-models = "domain_tune_lab.evaluate_sentiment_models:main"
train-sentiment-lora = "domain_tune_lab.train_sentiment_lora:main"
serve-sentiment-ui = "domain_tune_lab.serve_sentiment:main"

[tool.setuptools.packages.find]
where = ["src"]
